# jupyter-widgets_01232023

./: README.md
backbone_demo/: package-lock.json  package.json  webpack.config.js
backbone_demo/src/: index.ts
backbone_demo/src/language_demos/: func_spread_rest.ts  spread_rest.ts
backbone_demo/src/models/: PersonModel.ts
backbone_demo/src/views/: PersonView.ts
class_docs/: PUBLISH.md  RUN_TESTS.md
demo_widgets/: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  demo_widgets.json  install.json  package-lock.json  package.json  pyproject.toml  pytest.ini  webpack.config.js
demo_widgets/class_docs/: LINKS.md
demo_widgets/css/: example_widget.css  stock_chart_widget.css  stock_list_widget.css  stock_lookup_widget.css
demo_widgets/demo_widgets/: __init__.py  _frontend.py  _version.py  example.py
demo_widgets/demo_widgets/nbextension/: extension.js
demo_widgets/demo_widgets/tests/: conftest.py  test_example.py  test_nbextension_path.py
demo_widgets/demo_widgets/widgets/: example_widget.py  stock_chart_widget.py  stock_list_widget.py  stock_lookup_widget.py
demo_widgets/demos/: BuiltInWidgetsAndLinking.ipynb  ExampleWidget.ipynb  StockChartWidget.ipynb  StockListWidget-Copy1.ipynb  StockListWidget.ipynb  StockLookupWidget.ipynb  StockViewer.ipynb
demo_widgets/docs/: Makefile  environment.yml  make.bat
demo_widgets/docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
demo_widgets/docs/source/_static/: embed-bundle.js.LICENSE.txt
demo_widgets/examples/: introduction.ipynb
demo_widgets/exercises/: exercise-1.md  exercise-2.md  exercise-3.md
demo_widgets/src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
demo_widgets/src/widgets/: example_widget.ts  stock_chart_widget.ts  stock_list_widget.ts  stock_lookup_widget.ts
exercises/: exercise-4.md
