[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "demo_widgets"
description = "A Custom Jupyter Widget Library"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "Eric", email = "eric@t4d.io" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
    "yfinance>=0.2.4"
]
version = "0.1.4"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/Training 4 Developers LLC/demo_widgets"

[tool.hatch.build]
artifacts = [
    "demo_widgets/nbextension/index.*",
    "demo_widgets/labextension/*.tgz",
    "demo_widgets/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"demo_widgets/nbextension" = "share/jupyter/nbextensions/demo_widgets"
"demo_widgets/labextension" = "share/jupyter/labextensions/demo_widgets"
"./install.json" = "share/jupyter/labextensions/demo_widgets/install.json"
"./demo_widgets.json" = "etc/jupyter/nbconfig/notebook.d/demo_widgets.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "demo_widgets/nbextension/index.js",
    "demo_widgets/labextension/package.json",
]
skip-if-exists = [
    "demo_widgets/nbextension/index.js",
    "demo_widgets/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "demo_widgets/_version.py" },
]

[tool.tbump.version]
current = "0.1.4"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
